update get all user, delete account